# daki4mlops

./: .gitignore  .pre-commit-config.yaml  README.md  requirements.txt  resnet18.py  test.py  train.py
.dvc/: config
conf/: config.yaml  structured_config.py
conf/data/: tiny_imagenet.yaml
data/: dataloader.py  tiny-imagenet-200.dvc
inference/: CMakeLists.txt  README.md
inference/onnx/: resnet18_tinyimagenet_64.onnx
inference/src/: cli.cpp  cli.hpp  main.cpp  ort_classifier.cpp  ort_classifier.hpp  preprocess.cpp  preprocess.hpp
model/: README.md  resnet18.py
onnx/: export_onnx.py  resnet18.py
